[package]
name = "libedgedns"
version = "0.3.0"
authors = ["Frank Denis <github@pureftpd.org>"]
publish = false

[features]
webservice = ["hyper"]
nightly = ["hyper/nightly", "log/nightly", "prometheus/nightly", "coarsetime/nightly"]

[dependencies]
base64 = "*"
bpf = "*"
byteorder = "*"
bytes = "*"
clippy = {version = "*", optional = true}
clockpro-cache = "*"
coarsetime = "*"
dnstap = "*"
env_logger = "*"
futures = "*"
hyper = {version = "*", optional = true, default-features = false}
jumphash = "*"
lazy_static = "*"
log = "*"
net2 = "*"
nix = "~0.8 "
parking_lot = "*"
privdrop = "*"
prometheus = {git = "https://github.com/pingcap/rust-prometheus", default-features = false}
rand = "*"
siphasher = "*"
slab = "*"
socket-priority = "*"
tokio-core = "*"
tokio-io = "*"
tokio-timer = "*"
toml = "*"
ipnet = "2.7"
ip = "1.1"
rocksdb = "0.21"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[profile.release]
lto = true
panic = "abort"
opt-level = 3
